[tool.poetry]
name = "httpwrapper"
version = "0.1.0"
description = ""
authors = ["trojvn <mrx.trojan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
aiohttp = "^3.11.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
